Fixed typo in Software Chapter intro

--- a/software/software.tex
+++ b/software/software.tex
@@ -1,6 +1,6 @@
 \chapter{Software Development}
 
-We have discussed the requirements of the chosen algorithm, and had a detailed overview of the capabilities and limitations of the hardware available to the team. This chapter analysis's the tools and techniques used to develop such the project's algorithm, and discusses some of the trade-offs and optimisations that were investigated.
+We have discussed the requirements of the chosen algorithm, and had a detailed overview of the capabilities and limitations of the hardware available to the team. This chapter gives analysis of the tools and techniques used to develop such the project's algorithm, and discusses some of the trade-offs and optimisations that were investigated.
 
 \input{software/algorithm}
 \input{software/heuristics}
