Talks about more velcro

--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -203,7 +203,21 @@ A design was created using fritzing \cite{fritzing} which can be seen in Figure~
 
 This was then built, as can be seen from Figure~\ref{fig:board}. To avoid having to solder on the actual mBed and sensor to the veroboard, female header pins are used in a manner similar to IC holders allowing for them to be placed and removed from the board as required. For compactness, the battery packs were attached to the underside of the board using velcro. 
 
-\note{talk about the rest of the velcro}
+\begin{figure}
+	\centering
+	\includegraphics[scale=.1]{prototype_no_straps.jpg}
+	\caption{Prototype board}
+	\label{fig:board}
+\end{figure}
+
+The board was now able to be placed upon a foot, however there was nothing to secure it in place. A similar approach was taken from the participant study of using velcro. Two pieces of velcro would be attached to the board, whilst another two to the foot. This would then allow the board to be placed on the foot with the velcro holding the board onto the foot. The reasoning for using two pieces of velcro over one is that it was found to allow for more stability when on the foot over one piece where it leaves room for the board to start rotating forwards and backwards. The board with the velcro can be seen in Figure~\ref{fig:board:velcro}.
+
+\begin{figure}
+	\centering
+	\includegraphics[scale=.1]{prototype_straps.jpg}
+	\caption{Prototype board with velcro straps}
+	\label{fig:board:velcro}
+\end{figure}
 
 \note{Limitations of mBed, e.g. hardware divide, floating point arithmetic}
 \note{Configuring Watchdog Oscillator for main clock}
