moves note to correct section

--- a/hardware/cortex.tex
+++ b/hardware/cortex.tex
@@ -1,5 +1,7 @@
 \namedsection{ARM Cortex M0 Processor}{Pasat}
 
+\note{talk about limitations of the processor ie no hardware divide or floating point arithmetic}
+
 This section discusses one of the main requirement and one of the essential aspect of our project, ARM’s Cortex M0 processor. This processor is the member of the Cortex-M family in term of costs and performance/functionality. It has been designed in order to allow intelligent compromises in terms of power usage, computational power and in the simplicity of the design. It implements a simplified version of the Advanced Microcontroller Bus Architecture (AMBA), the AMBA-Lite bus which allows connection to different peripherals. In this way, the Cortex-M0 generally acts as the master device and the peripherals act as slaves. Below, in figure \ref{fig:cortexm0ds}, the schematic for the processor can be seen.\\
 \begin{figure}
 \centering
