Added the Management.tex version that also include costs.tex

--- a/management/management.tex
+++ b/management/management.tex
@@ -6,3 +6,4 @@ Careful planning and management is always important for large projects, and none
 \input{management/planning}
 \input{management/tools}
 \input{management/client}
+\input{management/costs}
