--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -21,7 +21,7 @@ Figure \ref{fig:exercises} shows some of the inflight exercises which can be per
 
 Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy efficient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul flight.
 
-\namedsection{Report Overview}{Finch}
+\namedsection{Report Overview}{Finch \& Shepherd}
 
 This report first describes the research and analysis of the algorithms used for exercise detection which currently exist, specifically focusing on Machine Learning techniques. This includes a description of the tools and techniques used, and the methods by which the effectiveness of trained algorithms were evaluated.
 
