Change cite location in text now we're using IEEE

--- a/research/exercise-detection.tex
+++ b/research/exercise-detection.tex
@@ -14,6 +14,6 @@
 	
 	In many cases, research involving activity classification using kinematic sensors for low-power constrained devices typically focus on mobile phones. While not all research in this area is applicable to ultra-low-power sub-threshold micro controllers, the same techniques can be applied.
 	
-	\cite{kwapisz2011activity} discusses methods of activity classification using a mobile phone accelerometer, describing the potential for a wide-range of activity recognition using a mobile phone in a pocket. Although the activities classified tended to involve more differentiable activity levels, such as walking, jogging and sitting, as opposed to sitting and rotating a foot, because the machine learning was used to obtain results with around 90\% accuracy, it suggests that machine learning for a low-power device is certainly feasible. \todo{Consider reword}
+	 Kwapisz discusses methods of activity classification using a mobile phone accelerometer, describing the potential for a wide-range of activity recognition using a mobile phone in a pocket \cite{kwapisz2011activity}. Although the activities classified tended to involve more differentiable activity levels, such as walking, jogging and sitting, as opposed to sitting and rotating a foot, because the machine learning was used to obtain results with around 90\% accuracy, it suggests that machine learning for a low-power device is certainly feasible. \todo{Consider reword}
 	
 	
